--- a/src/app/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/sidenav-menu/sidenav-menu.component.html
@@ -15,35 +15,35 @@
 	</div>
 	<ul>
 		<li>
-			<a routerLink="/dashboard" href="#">
+			<a routerLink="/dashboard" routerLinkActive="active-link" href="#">
 				<i class="bx bxs-grid-alt"></i>
 				<span class="nav-item">Dashboard</span>
 			</a>
 			<span class="tooltip">Dashboard</span>
 		</li>
 		<li>
-			<a routerLink="/products" href="#">
+			<a routerLink="/products" routerLinkActive="active-link" href="#">
 				<i class="bx bxs-shopping-bag"></i>
 				<span class="nav-item">Products</span>
 			</a>
 			<span class="tooltip">Products</span>
 		</li>
 		<li>
-			<a routerLink="/categories" href="#">
+			<a routerLink="/categories" routerLinkActive="active-link" href="#">
 				<i class="bx bx-list-check"></i>
 				<span class="nav-item">Categories</span>
 			</a>
 			<span class="tooltip">Categories</span>
 		</li>
 		<li>
-			<a routerLink="/orders" href="#">
+			<a routerLink="/orders" routerLinkActive="active-link" href="#">
 				<i class="bx bxs-food-menu"></i>
 				<span class="nav-item">Orders</span>
 			</a>
 			<span class="tooltip">Orders</span>
 		</li>
 		<li>
-			<a routerLink="/settings" href="#">
+			<a routerLink="/settings" routerLinkActive="active-link" href="#">
 				<i class="bx bx-cog"></i>
 				<span class="nav-item">Settings</span>
 			</a>
