--- a/src/app/sidenav-menu/sidenav-menu.component.scss
+++ b/src/app/sidenav-menu/sidenav-menu.component.scss
@@ -105,6 +105,10 @@
 	transition: all 0.3s ease;
 }
 
+.sidebar ul li a.active-link {
+	border: 1px solid #fff; // Set the background color to your active color
+}
+
 .sidebar ul li a i {
 	min-width: 50px;
 	text-align: center;
