--- a/src/app/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/sidenav-menu/sidenav-menu.component.html
@@ -1,62 +1,63 @@
 <div [ngClass]="{'active': isOpen}" class="sidebar">
-	<div class="top">
-		<div class="logo">
-			<i class="bx bxl-codepen"></i>
-			<span>CodeCommerce</span>
+	<div>
+		<div class="top">
+			<div class="logo">
+				<i class="bx bxl-codepen"></i>
+				<span>CodeCommerce</span>
+			</div>
+			<i class="bx bx-menu menu-icon" (click)="isOpen = !isOpen"></i>
 		</div>
-		<i class="bx bx-menu menu-icon" (click)="isOpen = !isOpen"></i>
-	</div>
-	<div class="user">
-		<img class="user-img" src="../../assets/vern_daz.jpeg" alt="picture of a couple" />
-		<div>
-			<p class="bold">Darren Nienaber</p>
-			<p>Admin</p>
+		<div class="navigation">
+			<ul>
+				<li>
+					<a routerLink="/dashboard" routerLinkActive="active-link" href="#">
+						<i class="bx bxs-grid-alt"></i>
+						<span class="nav-item">Dashboard</span>
+					</a>
+					<span class="tooltip">Dashboard</span>
+				</li>
+				<li>
+					<a routerLink="/products" routerLinkActive="active-link" href="#">
+						<i class="bx bxs-shopping-bag"></i>
+						<span class="nav-item">Products</span>
+					</a>
+					<span class="tooltip">Products</span>
+				</li>
+				<li>
+					<a routerLink="/categories" routerLinkActive="active-link" href="#">
+						<i class="bx bx-list-check"></i>
+						<span class="nav-item">Categories</span>
+					</a>
+					<span class="tooltip">Categories</span>
+				</li>
+				<li>
+					<a routerLink="/orders" routerLinkActive="active-link" href="#">
+						<i class="bx bxs-food-menu"></i>
+						<span class="nav-item">Orders</span>
+					</a>
+					<span class="tooltip">Orders</span>
+				</li>
+			</ul>
 		</div>
 	</div>
-	<ul>
-		<li>
-			<a routerLink="/dashboard" routerLinkActive="active-link" href="#">
-				<i class="bx bxs-grid-alt"></i>
-				<span class="nav-item">Dashboard</span>
-			</a>
-			<span class="tooltip">Dashboard</span>
-		</li>
-		<li>
-			<a routerLink="/products" routerLinkActive="active-link" href="#">
-				<i class="bx bxs-shopping-bag"></i>
-				<span class="nav-item">Products</span>
-			</a>
-			<span class="tooltip">Products</span>
-		</li>
-		<li>
-			<a routerLink="/categories" routerLinkActive="active-link" href="#">
-				<i class="bx bx-list-check"></i>
-				<span class="nav-item">Categories</span>
-			</a>
-			<span class="tooltip">Categories</span>
-		</li>
-		<li>
-			<a routerLink="/orders" routerLinkActive="active-link" href="#">
-				<i class="bx bxs-food-menu"></i>
-				<span class="nav-item">Orders</span>
-			</a>
-			<span class="tooltip">Orders</span>
-		</li>
-		<li>
-			<a routerLink="/settings" routerLinkActive="active-link" href="#">
-				<i class="bx bx-cog"></i>
-				<span class="nav-item">Settings</span>
-			</a>
-			<span class="tooltip">Settings</span>
-		</li>
-		<li>
-			<a href="#">
-				<i class="bx bx-log-out"></i>
-				<span class="nav-item">Logout</span>
-			</a>
-			<span class="tooltip">Logout</span>
-		</li>
-	</ul>
+	<div class="bottom">
+		<ul>
+			<li>
+				<a routerLink="/settings" routerLinkActive="active-link" href="#">
+					<i class="bx bx-cog"></i>
+					<span class="nav-item">Settings</span>
+				</a>
+				<span class="tooltip">Settings</span>
+			</li>
+			<li>
+				<a href="#">
+					<i class="bx bx-log-out"></i>
+					<span class="nav-item">Logout</span>
+				</a>
+				<span class="tooltip">Logout</span>
+			</li>
+		</ul>
+	</div>
 </div>
 
 <div class="main-content">
