--- a/src/app/sidenav-menu/sidenav-menu.component.scss
+++ b/src/app/sidenav-menu/sidenav-menu.component.scss
@@ -1,3 +1,6 @@
+// change the width of the sidebar here
+$active-width: 300px;
+
 .user-img {
 	width: 50px;
 	height: 50px;
@@ -21,12 +24,12 @@
 }
 
 .sidebar.active ~ .main-content {
-	left: 250px;
-	width: calc(100% - 250px);
+	left: $active-width;
+	width: calc(100% - $active-width);
 }
 
 .sidebar.active {
-	width: 250px;
+	width: $active-width;
 }
 
 .sidebar .menu-icon {
