global sidebar width variable setup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@300;400;500;600;700&display=swap');
 
 /* Imported Styles*/
+@import 'styles/variables';
 @import 'styles/sidebar';
 @import 'styles/dashboard';
 
