converted to scss

--- a/src/app/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/sidenav-menu/sidenav-menu.component.html
@@ -1,4 +1,4 @@
-<nav [ngClass]="{'closed': isOpen}" class="sidebar">
+<nav [ngClass]="{'closed': !isOpen}" class="sidebar">
 	<header>
 		<div class="image-text">
 			<span class="image">
@@ -10,7 +10,7 @@
 				<span class="profession">Web developer</span>
 			</div>
 		</div>
-		<i (click)="toggleMenu()" class="bx bx-chevron-right toggle"></i>
+		<i [ngClass]="{'mode-switch': isDark}" (click)="toggleMenu()" class="bx bx-chevron-right toggle"></i>
 	</header>
 
 	<div class="menu-bar">
@@ -21,25 +21,25 @@
 			</li>
 			<ul class="menu-links">
 				<li class="nav-link">
-					<a routerLink="/dashboard" href="#">
+					<a [ngClass]="{'mode-switch': isDark}" routerLink="/dashboard" href="#">
 						<i class="bx bx-home-alt icon"></i>
 						<span class="text nav-text">Dashboard</span>
 					</a>
 				</li>
 				<li class="nav-link">
-					<a routerLink="/products" href="#">
+					<a [ngClass]="{'mode-switch': isDark}" routerLink="/products" href="#">
 						<i class="bx bxs-shopping-bag icon"></i>
 						<span class="text nav-text">Products</span>
 					</a>
 				</li>
 				<li class="nav-link">
-					<a routerLink="/categories" href="#">
+					<a [ngClass]="{'mode-switch': isDark}" routerLink="/categories" href="#">
 						<i class="bx bx-list-check icon"></i>
 						<span class="text nav-text">Categories</span>
 					</a>
 				</li>
 				<li class="nav-link">
-					<a routerLink="/orders" routerLinkActive="active-link" href="#">
+					<a [ngClass]="{'mode-switch': isDark}" routerLink="/orders" routerLinkActive="active-link" href="#">
 						<i class="bx bxs-food-menu icon"></i>
 						<span class="text nav-text">Orders</span>
 					</a>
@@ -49,25 +49,27 @@
 
 		<div class="bottom-content">
 			<li>
-				<a routerLink="/settings" routerLinkActive="active-link" href="#">
+				<a [ngClass]="{'mode-switch': isDark}" routerLink="/settings" routerLinkActive="active-link" href="#">
 					<i class="bx bx-cog icon"></i>
 					<span class="text nav-text">Settings</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a [ngClass]="{'mode-switch': isDark}" href="#">
 					<i class="bx bx-log-out icon"></i>
 					<span class="text nav-text">Logout</span>
 				</a>
 			</li>
 			<li class="mode">
 				<div class="moon-sun">
-					<i [ngClass]="isDark ? 'bx bx-sun icon sun' : 'bx bx-moon icon moon'"></i>
+					<ng-container *ngIf="isOpen">
+						<i [ngClass]="isDark ? 'bx bx-sun icon sun' : 'bx bx-moon icon moon'"></i>
+					</ng-container>
 				</div>
 				<span class="mode-text text">{{ isDark ? 'Light Mode': 'Dark Mode' }}</span>
 
 				<div (click)="toggleDarkMode()" class="toggle-switch">
-					<span class="switch"></span>
+					<span [ngClass]="{'mode-switch': isDark}" class="switch"></span>
 				</div>
 			</li>
 		</div>
