--- a/src/app/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/sidenav-menu/sidenav-menu.component.html
@@ -47,7 +47,7 @@
 			</ul>
 		</div>
 
-		<div class="bottom-content">
+		<div class="menu-bar-bottom">
 			<li>
 				<a [ngClass]="{'mode-switch': isDark}" routerLink="/settings" routerLinkActive="active-link" href="#">
 					<i class="bx bx-cog icon"></i>
