--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -1,257 +1,3 @@
-// /* ==== Sidebar ==== */
-// .sidebar {
-// 	position: fixed;
-// 	top: 0;
-// 	left: 0;
-// 	height: 100%;
-// 	width: $sidebar-width;
-// 	background-color: var(--sidebar-color);
-// 	padding: 10px 14px;
-// 	transition: var(--tran-05);
-// 	z-index: 100;
-// }
-
-// .sidebar.closed {
-// 	width: 88px;
-// }
-
-// /* ==== Reusable CSS ==== */
-// .sidebar .text {
-// 	font-size: 16px;
-// 	font-weight: 500;
-// 	color: var(--text-color);
-// 	transition: var(--tran-03);
-// 	white-space: nowrap; // IMPORTANT - Prevents text from wrapping while in collapsed mode
-// 	opacity: 1;
-// }
-
-// .sidebar.closed .text {
-// 	opacity: 0;
-// }
-
-// .sidebar .image {
-// 	min-width: 60px;
-// 	display: flex;
-// 	align-items: center;
-// }
-
-// .sidebar.closed .image {
-// 	justify-content: center;
-// }
-
-// .sidebar li {
-// 	height: 50px;
-// 	margin-top: 10px;
-// 	list-style: none;
-// 	display: flex;
-// 	align-items: center;
-// 	// border: 1px solid green;
-// }
-
-// .sidebar li .icon {
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-// 	min-width: 60px;
-// 	font-size: 20px;
-// }
-
-// .sidebar li .icon,
-// .sidebar li .text {
-// 	color: var(--text-color);
-// 	transition: var(--tran-02);
-// }
-
-// .sidebar header {
-// 	position: relative;
-// }
-
-// .sidebar .image-text img {
-// 	width: 40px;
-// 	border: 1px solid #1373b8;
-// 	border-radius: 50%;
-// }
-
-// .sidebar header .image-text {
-// 	display: flex;
-// 	align-items: center;
-// }
-
-// header .image-text .header-text {
-// 	display: flex;
-// 	flex-direction: column;
-// }
-
-// .header-text .name {
-// 	font-size: 18px;
-// 	font-weight: 600;
-// }
-
-// .header-text .profession {
-// 	margin-top: -2px;
-// }
-
-// .sidebar header .toggle {
-// 	position: absolute;
-// 	top: 50%;
-// 	right: -25px;
-// 	transform: translateY(-50%) rotate(180deg);
-// 	height: 25px;
-// 	width: 25px;
-// 	background: var(--primary-color);
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-// 	border-radius: 50%;
-// 	color: var(--sidebar-color);
-// 	font-size: 22px;
-// 	cursor: pointer;
-// 	transition: var(--tran-03);
-// }
-
-// .sidebar.closed header .toggle {
-// 	transform: translateY(-50%);
-// }
-
-// .sidebar.closed header .toggle {
-// 	transform: translateY(-50%) rotate(0deg);
-// }
-
-// body.dark .sidebar header .toggle {
-// 	transform: rotate(180deg);
-// 	color: var(--text-color);
-// }
-
-// .sidebar .search-box {
-// 	background: var(--primary-color-light);
-// 	border-radius: 6px;
-// }
-
-// .search-box input {
-// 	height: 100%;
-// 	width: 100%;
-// 	outline: none;
-// 	border: none;
-// 	border-radius: 6px;
-// 	padding-right: 8px;
-// 	background: var(--primary-color-light);
-// }
-
-// .sidebar.closed .search-box input {
-// 	padding-right: 0px;
-// }
-
-// .sidebar li a {
-// 	height: 100%;
-// 	width: 100%;
-// 	display: flex;
-// 	align-items: center;
-// 	text-decoration: none;
-// 	border-radius: 6px;
-// 	transition: var(--tran-04);
-// }
-
-// .sidebar li a:hover {
-// 	background: var(--primary-color);
-// }
-
-// .sidebar li a:hover .icon,
-// .sidebar li a:hover .text {
-// 	color: var(--sidebar-color);
-// }
-
-// body.dark .sidebar li a:hover .icon,
-// body.dark .sidebar li a:hover .text {
-// 	color: var(--text-color);
-// }
-
-// .sidebar .menu-bar {
-// 	height: calc(100% - 50px);
-// 	display: flex;
-// 	flex-direction: column;
-// 	justify-content: space-between;
-// }
-
-// .menu-bar .mode {
-// 	position: relative;
-// 	border-radius: 6px;
-// 	background: var(--primary-color-light);
-// }
-
-// .menu-bar .mode .moon-sun {
-// 	height: 50px;
-// 	width: 60px;
-// 	display: flex;
-// 	align-items: center;
-// }
-
-// .menu-bar .mode i {
-// 	position: absolute;
-// 	transition: var(--tran-03);
-// }
-
-// // Toggle switch
-// .menu-bar .mode .toggle-switch {
-// 	position: absolute;
-// 	right: 0px;
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-// 	height: 100%;
-// 	min-width: 60px;
-// 	cursor: pointer;
-// 	border-radius: 6px;
-// 	background: var(--primary-color-light);
-// }
-
-// .mode .toggle-switch .switch {
-// 	position: relative;
-// 	height: 22px;
-// 	width: 44px;
-// 	border-radius: 25px;
-// 	background: var(--toggle-color);
-// }
-
-// .switch::before {
-// 	content: '';
-// 	position: absolute;
-// 	top: 50%;
-// 	left: 5px;
-// 	height: 15px;
-// 	width: 15px;
-// 	transform: translateY(-50%);
-// 	background: var(--sidebar-color);
-// 	border-radius: 50%;
-// 	transition: var(--tran-03);
-// }
-
-// body.dark .switch::before {
-// 	left: 24px;
-// }
-
-// body.dark .menu-bar .mode i.sun {
-// 	opacity: 1;
-// }
-
-// body.dark .menu-bar .mode i.moon {
-// 	opacity: 0;
-// }
-// // Toggle Switch end
-
-// .main-content {
-// 	position: relative;
-// 	left: $sidebar-width;
-// 	height: 100vh;
-// 	width: calc(100% - $sidebar-width);
-// 	background: var(--body-color);
-// 	transition: var(--tran-05);
-// }
-
-// .sidebar.closed ~ .main-content {
-// 	left: 88px;
-// 	width: calc(100% - 88px);
-// }
-
 nav.sidebar {
 	position: fixed;
 	top: 0;
@@ -523,6 +269,256 @@ nav.sidebar {
 	background: var(--body-color);
 	transition: var(--tran-05);
 }
+
+// /* ==== KEEP THESE STYLES FOR PURE CSS REFERENCE ==== */
+// /* ==== Sidebar ==== */
+// .sidebar {
+// 	position: fixed;
+// 	top: 0;
+// 	left: 0;
+// 	height: 100%;
+// 	width: $sidebar-width;
+// 	background-color: var(--sidebar-color);
+// 	padding: 10px 14px;
+// 	transition: var(--tran-05);
+// 	z-index: 100;
+// }
+
+// .sidebar.closed {
+// 	width: 88px;
+// }
+
+// /* ==== Reusable CSS ==== */
+// .sidebar .text {
+// 	font-size: 16px;
+// 	font-weight: 500;
+// 	color: var(--text-color);
+// 	transition: var(--tran-03);
+// 	white-space: nowrap; // IMPORTANT - Prevents text from wrapping while in collapsed mode
+// 	opacity: 1;
+// }
+
+// .sidebar.closed .text {
+// 	opacity: 0;
+// }
+
+// .sidebar .image {
+// 	min-width: 60px;
+// 	display: flex;
+// 	align-items: center;
+// }
+
+// .sidebar.closed .image {
+// 	justify-content: center;
+// }
+
+// .sidebar li {
+// 	height: 50px;
+// 	margin-top: 10px;
+// 	list-style: none;
+// 	display: flex;
+// 	align-items: center;
+// 	// border: 1px solid green;
+// }
+
+// .sidebar li .icon {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	min-width: 60px;
+// 	font-size: 20px;
+// }
+
+// .sidebar li .icon,
+// .sidebar li .text {
+// 	color: var(--text-color);
+// 	transition: var(--tran-02);
+// }
+
+// .sidebar header {
+// 	position: relative;
+// }
+
+// .sidebar .image-text img {
+// 	width: 40px;
+// 	border: 1px solid #1373b8;
+// 	border-radius: 50%;
+// }
+
+// .sidebar header .image-text {
+// 	display: flex;
+// 	align-items: center;
+// }
+
+// header .image-text .header-text {
+// 	display: flex;
+// 	flex-direction: column;
+// }
+
+// .header-text .name {
+// 	font-size: 18px;
+// 	font-weight: 600;
+// }
+
+// .header-text .profession {
+// 	margin-top: -2px;
+// }
+
+// .sidebar header .toggle {
+// 	position: absolute;
+// 	top: 50%;
+// 	right: -25px;
+// 	transform: translateY(-50%) rotate(180deg);
+// 	height: 25px;
+// 	width: 25px;
+// 	background: var(--primary-color);
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	border-radius: 50%;
+// 	color: var(--sidebar-color);
+// 	font-size: 22px;
+// 	cursor: pointer;
+// 	transition: var(--tran-03);
+// }
+
+// .sidebar.closed header .toggle {
+// 	transform: translateY(-50%);
+// }
+
+// .sidebar.closed header .toggle {
+// 	transform: translateY(-50%) rotate(0deg);
+// }
+
+// body.dark .sidebar header .toggle {
+// 	transform: rotate(180deg);
+// 	color: var(--text-color);
+// }
+
+// .sidebar .search-box {
+// 	background: var(--primary-color-light);
+// 	border-radius: 6px;
+// }
+
+// .search-box input {
+// 	height: 100%;
+// 	width: 100%;
+// 	outline: none;
+// 	border: none;
+// 	border-radius: 6px;
+// 	padding-right: 8px;
+// 	background: var(--primary-color-light);
+// }
+
+// .sidebar.closed .search-box input {
+// 	padding-right: 0px;
+// }
+
+// .sidebar li a {
+// 	height: 100%;
+// 	width: 100%;
+// 	display: flex;
+// 	align-items: center;
+// 	text-decoration: none;
+// 	border-radius: 6px;
+// 	transition: var(--tran-04);
+// }
+
+// .sidebar li a:hover {
+// 	background: var(--primary-color);
+// }
+
+// .sidebar li a:hover .icon,
+// .sidebar li a:hover .text {
+// 	color: var(--sidebar-color);
+// }
+
+// body.dark .sidebar li a:hover .icon,
+// body.dark .sidebar li a:hover .text {
+// 	color: var(--text-color);
+// }
+
+// .sidebar .menu-bar {
+// 	height: calc(100% - 50px);
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: space-between;
+// }
+
+// .menu-bar .mode {
+// 	position: relative;
+// 	border-radius: 6px;
+// 	background: var(--primary-color-light);
+// }
+
+// .menu-bar .mode .moon-sun {
+// 	height: 50px;
+// 	width: 60px;
+// 	display: flex;
+// 	align-items: center;
+// }
+
+// .menu-bar .mode i {
+// 	position: absolute;
+// 	transition: var(--tran-03);
+// }
+
+// // Toggle switch
+// .menu-bar .mode .toggle-switch {
+// 	position: absolute;
+// 	right: 0px;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	height: 100%;
+// 	min-width: 60px;
+// 	cursor: pointer;
+// 	border-radius: 6px;
+// 	background: var(--primary-color-light);
+// }
+
+// .mode .toggle-switch .switch {
+// 	position: relative;
+// 	height: 22px;
+// 	width: 44px;
+// 	border-radius: 25px;
+// 	background: var(--toggle-color);
+// }
+
+// .switch::before {
+// 	content: '';
+// 	position: absolute;
+// 	top: 50%;
+// 	left: 5px;
+// 	height: 15px;
+// 	width: 15px;
+// 	transform: translateY(-50%);
+// 	background: var(--sidebar-color);
+// 	border-radius: 50%;
+// 	transition: var(--tran-03);
+// }
+
+// body.dark .switch::before {
+// 	left: 24px;
+// }
+
+// body.dark .menu-bar .mode i.sun {
+// 	opacity: 1;
+// }
+
+// body.dark .menu-bar .mode i.moon {
+// 	opacity: 0;
+// }
+// // Toggle Switch end
+
+// .main-content {
+// 	position: relative;
+// 	left: $sidebar-width;
+// 	height: 100vh;
+// 	width: calc(100% - $sidebar-width);
+// 	background: var(--body-color);
+// 	transition: var(--tran-05);
+// }
 
 // .sidebar.closed ~ .main-content {
 // 	left: 88px;
