--- a/src/app/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/sidenav-menu/sidenav-menu.component.html
@@ -16,7 +16,7 @@
 	<div class="menu-bar">
 		<div class="menu">
 			<li class="search-box">
-				<i class="bx bx-search icon"></i>
+				<i [ngClass]="{'mode-switch': isDark}" class="bx bx-search icon"></i>
 				<input type="search" placeholder="Search..." />
 			</li>
 			<ul class="menu-links">
