--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -81,6 +81,9 @@ nav.sidebar {
 					min-width: 60px;
 					font-size: 20px;
 				}
+				& .mode-switch {
+					color: var(--text-color);
+				}
 				input {
 					height: 100%;
 					width: 100%;
